<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingMax">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvBack"
        android:layout_width="46dp"
        android:layout_height="46dp"
        app:cardCornerRadius="23dp"
        app:cardElevation="0dp">
        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:tint="@color/colorPrimarySecondary"
            app:srcCompat="@drawable/ic_arrow_back"
            android:layout_gravity="center"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:layout_marginTop="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textTitle"
            android:text="@string/select_year_title"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/roboto_bold"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="@dimen/paddingMid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:cardCornerRadius="@dimen/radiusNormal"
            app:strokeColor="@color/colorBorder">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/paddingMid">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textNormalMin"
                        android:text="@string/select_year_hint"
                        android:textColor="@color/colorTextHint"
                        android:fontFamily="@font/roboto_regular"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textNormalHint"
                        android:textColor="@color/colorTextPrimary"
                        android:fontFamily="@font/roboto_bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end">
                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        app:srcCompat="@drawable/ic_arrow"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/select_year_next"/>
    </LinearLayout>
</LinearLayout>