<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/scrollingContent"
            android:layout_marginTop="@dimen/paddingMax"
            android:paddingLeft="@dimen/paddingMax"
            android:paddingRight="@dimen/paddingMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="@dimen/radiusBig"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/paddingMid">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddingMax"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="@dimen/textTitle"
                        android:fontFamily="@font/roboto_bold"
                        android:layout_marginBottom="@dimen/paddingMin"
                        android:text="M10-209C-19"/>
                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="@dimen/textNormalHint"
                        android:layout_marginBottom="@dimen/paddingMin"
                        android:text="Институт №1"/>
                    <TextView
                        android:id="@+id/tvYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="@dimen/textNormalHint"
                        android:text="2 курс"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textNormalHint"
                        android:gravity="end"
                        android:text="@string/settings_info_card"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/paddingMid"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:tint="@color/colorPrimarySecondary"
                            app:srcCompat="@drawable/ic_group"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="@dimen/paddingMin"
                            android:textSize="@dimen/textButton"
                            android:textColor="@color/colorTextPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/settings_select_group"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end|center_vertical">
                            <ImageView
                                android:layout_width="8dp"
                                android:layout_height="12dp"
                                app:srcCompat="@drawable/ic_arrow"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBorder"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/paddingMid"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:tint="@color/colorPrimarySecondary"
                            app:srcCompat="@drawable/ic_group"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="@dimen/paddingMin"
                            android:textSize="@dimen/textButton"
                            android:textColor="@color/colorTextPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/settings_select_group"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end|center_vertical">
                            <ImageView
                                android:layout_width="8dp"
                                android:layout_height="12dp"
                                app:srcCompat="@drawable/ic_arrow"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBorder"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                android:layout_marginBottom="@dimen/paddingMid">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/paddingMid"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:tint="@color/colorPrimarySecondary"
                            app:srcCompat="@drawable/ic_group"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="@dimen/paddingMin"
                            android:textSize="@dimen/textButton"
                            android:textColor="@color/colorTextPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/settings_select_group"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end|center_vertical">
                            <ImageView
                                android:layout_width="8dp"
                                android:layout_height="12dp"
                                app:srcCompat="@drawable/ic_arrow"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBorder"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/radiusNormal"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:background="@drawable/background_gradient">
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="@dimen/radiusNormal"
                        android:background="@color/colorBackgroundSecondary"
                        app:cardElevation="0dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:foreground="?android:selectableItemBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="@dimen/paddingMid">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="1">

                                <TextView
                                    android:id="@+id/tvTitle"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:textColor="@color/colorTextPrimary"
                                    android:text="@string/settings_dark_theme"
                                    android:layout_weight="1"
                                    android:textSize="@dimen/textNormalHint"
                                    android:textStyle="bold"/>

                            </LinearLayout>


                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/swEnabled"
                                android:layout_height="1dp"
                                android:layout_width="wrap_content"
                                app:useMaterialThemeColors="false" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>